--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@capacitor/cli": "^7.1.0",
     "@capacitor/core": "^7.1.0",
     "@capacitor/ios": "^7.1.0",
+    "@tailwindcss/vite": "^4.0.14",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.0.14",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
